tests/fixtures/invalid/dict_ge_int.py
# Cannot compare with >= Dict[str, int] and Int
x: bool = {"a": 1} >= 1
